docs/website/src/main/resources/certifications/jakarta-expression-language/3.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Expression Language.

# Java Expression Language, as delivered in Eclipse GlassFish 5.1, Full Profile, Certification Request

- Product Name, Version and download URL (if applicable) \
  Eclipse GlassFish 5.1, includes: Expression Language RI (legacy name) 3.0.2 with Expression Language API 3.0.2
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
- Specification Name, Version and download URL \
  [Jakarta Expression Language 3.0](https://jakarta.ee/specifications/expression-language/3.0/)
- TCK Version, digital SHA-256 fingerprint and download URL \
*  [Expression Language TCK 3.0](http://download.eclipse.org/ee4j/jakartaee-tck/jakartaee8-eftl/promoted/eclipse-expression-language-tck-3.0.0.zip), SHA-256: `577bee8c9f6fa8ff2d00e41c54ac8825ae0f21e467f6fa70107aee914b9f9941`
- Public URL of TCK Results Summary \
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements \
  None
- Java runtime used to run the implementation \
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ... \
  Linux Centos 7

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 336 tests.
[javatest.batch] Number of Tests Passed      = 336
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```