docs/website/src/main/resources/certifications/jakarta-expression-language/4.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Expression Language.

# Jakarta Expression Language 4.0, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  Expression Language 4.0.0.
  [Expression Language Implementation Project](https://github.com/eclipse-ee4j/el-ri)
- Specification Name, Version and download URL: <br/>
  [Jakarta Expression Language 4.0](https://jakarta.ee/specifications/expression-language/4.0/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Expression Language TCK 4.0](https://download.eclipse.org/jakartaee/expression-language/4.0/eclipse-expression-language-tck-4.0.0.zip), SHA-256: `fa359403e898edbcf81e01c03979e8a052c6e21fc06fc1b215078cc4a2d57d2c`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_202
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Alpine Linux v3.12

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 336 tests.
[javatest.batch] Number of Tests Passed      = 336
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************

BUILD SUCCESSFUL
Total time: 8 minutes 0 seconds
SHA256_GF=16ffa2afdbfb880229d1b4701d0470d7617664fec4e2c898be2dc04adae9509f
SHA256_API=bdac40bf13816ce511c83fe00be4ab3447c5cd0e2dfc0c7c03d9ce8fa4b3e9e7
SHA256_TCK=fa359403e898edbcf81e01c03979e8a052c6e21fc06fc1b215078cc4a2d57d2c
Product_download=https://ci.eclipse.org/glassfish/job/glassfish_build-and-test-using-jenkinsfile/job/master/238/artifact/bundles/glassfish.zip
API_download=https://jakarta.oss.sonatype.org/content/repositories/staging/jakarta/el/jakarta.el-api/4.0.0/jakarta.el-api-4.0.0.jar
TCK_download=https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/jakarta-expression-language-tck-4.0.0.zip
OS4=3.12.0 NAME="Alpine Linux" ID=alpine VERSION_ID=3.12.0 PRETTY_NAME="Alpine Linux v3.12" HOME_URL="https://alpinelinux.org/" BUG_REPORT_URL="https://bugs.alpinelinux.org/"
JDK_VERSION=java version "1.8.0_202" Java(TM) SE Runtime Environment (build 1.8.0_202-b08) Java HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)
```
